--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ themes/*
 
 # Ignore everything in the "plugins" directory, except your own namespace
 plugins/*
-!plugins/studiodevs
+!plugins/stdevs
 
 # If you have a mixture of private (in repo) and public (published to market)
 # plugins, uncomment the following line to ignore all plugins in your namespace
